# kenseader

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
config/: default.toml
crates/kenseader-cli/: Cargo.toml
crates/kenseader-cli/src/: main.rs
crates/kenseader-cli/src/commands/: cleanup.rs  daemon.rs  import.rs  list.rs  mod.rs  refresh.rs  run.rs  subscribe.rs  unsubscribe.rs
crates/kenseader-core/: Cargo.toml
crates/kenseader-core/src/: config.rs  error.rs  lib.rs
crates/kenseader-core/src/ai/: mod.rs  summarizer.rs
crates/kenseader-core/src/ai/providers/: claude_api.rs  claude_cli.rs  cli_base.rs  gemini_api.rs  mod.rs  openai.rs
crates/kenseader-core/src/feed/: fetcher.rs  mod.rs  models.rs  opml.rs  parser.rs
crates/kenseader-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/kenseader-core/src/profile/: analyzer.rs  filter.rs  mod.rs  models.rs  tracker.rs
crates/kenseader-core/src/scheduler/: mod.rs  service.rs  tasks.rs
crates/kenseader-core/src/storage/: article_repo.rs  database.rs  feed_repo.rs  mod.rs  retry.rs  style_repo.rs
crates/kenseader-tui/: Cargo.toml
crates/kenseader-tui/src/: app.rs  event.rs  input.rs  keymap.rs  lib.rs  rich_content.rs  theme.rs
crates/kenseader-tui/src/image_renderer/: kitty.rs  mod.rs  ueberzug.rs
crates/kenseader-tui/src/scroll/: animation.rs  config.rs  easing.rs  mod.rs  timing.rs
crates/kenseader-tui/src/themes/: catppuccin.rs  dracula.rs  everforest.rs  gruvbox.rs  kanagawa.rs  mod.rs  monokai.rs  nord.rs  one_dark.rs  rose_pine.rs  solarized.rs  tokyo_night.rs  zenburn.rs
crates/kenseader-tui/src/widgets/: article_detail.rs  article_list.rs  image_viewer.rs  mod.rs  popup.rs  status_bar.rs  subscriptions.rs
docs/: ai-providers.md  ai-providers_CN.md  ai_summary_logic.md  ai_summary_logic_CN.md  cloud-sync.md  cloud-sync_CN.md  configuration.md  configuration_CN.md  daemon.md  daemon_CN.md  homebrew-distribution-setup.md  image-display.md  image-display_CN.md  keybindings.md  keybindings_CN.md
homebrew/: kenseader.rb
