[workspace]
resolver = "2"
members = [
    "crates/kenseader-core",
    "crates/kenseader-tui",
    "crates/kenseader-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kenneth"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP & Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# RSS Parsing
feed-rs = "2.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# AI - OpenAI
async-openai = "0.25"

# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "3.0"
image = "0.25"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2text = "0.13"
dirs = "5.0"
open = "5.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
async-trait = "0.1"
base64 = "0.22"
