[package]
name = "kenseader-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Kenseader RSS reader"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
feed-rs.workspace = true
sqlx.workspace = true
async-openai.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
html2text.workspace = true
dirs.workspace = true
uuid.workspace = true
url.workspace = true
async-trait.workspace = true
quick-xml = "0.37"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
