[package]
name = "kenseader-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI library for Kenseader RSS reader"

[dependencies]
kenseader-core = { path = "../kenseader-core" }
tokio.workspace = true
reqwest.workspace = true
ratatui.workspace = true
crossterm.workspace = true
ratatui-image.workspace = true
image.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
open.workspace = true
uuid.workspace = true
url.workspace = true
unicode-width = "0.2"
